Bug 23745 - mktime fix for Gnulib + coreutils
Summary: mktime fix for Gnulib + coreutils
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: time (show other bugs)
Version: 2.28
: P2 minor
Target Milestone: 2.29
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-08 05:32 UTC by eggert
Modified: 2018-11-03 01:41 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:
fweimer: security-


Attachments
mktime fix for Gnulib + coreutils (774 bytes, patch)
2018-10-08 05:32 UTC, eggert
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description eggert 2018-10-08 05:32:44 UTC
Created attachment 11296 [details]
mktime fix for Gnulib + coreutils

This fix affects only Gnulib. Patch attached.
Comment 1 eggert 2018-11-03 01:41:38 UTC
I installed the patch into glibc master and am marking this bug as fixed.

https://sourceware.org/git/?p=glibc.git;a=commit;h=5a580643111ef6081be7b4c7bd1997a5447c903f